# SupportDoc-Agent

./: .gitignore  CLAUDE.md  README.md  app.py  loader plan.md  loader.ipynb  main.py  notes.md  pyproject.toml  run_ingestion.py
chroma_db/: chroma.sqlite3
data/: support_docs.py
eval/: eval_dataset.json  results_20260529_082359.csv  results_20260529_083615.csv  results_20260529_090757.csv  results_20260529_101353.csv  results_20260529_123715.csv  run_eval.py
graph/: graph.py  state.py
graph/nodes/: _llm.py  generator.py  grader.py  retriever.py  rewriter.py  router.py
ingestion/: chunker.py  loader.ipynb  loader.py  vector_store.py
prompts/: generator_prompt.py  grader_prompt.py  rewriter_prompt.py  router_prompt.py
