[project]
name = "supportdoc-agent"
version = "0.1.0"
description = "Support agent for MS Intune troubleshooting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-google-vertexai>=3.2.3",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "langsmith>=0.8.5",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "streamlit>=1.57.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = [".venv*", "tests*"]
